--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.0.0",
     "@capacitor/android": "5.2.3",
     "@capacitor/app": "5.0.6",
+    "@capacitor/browser": "^5.1.0",
     "@capacitor/core": "5.2.3",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
