--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ToolsGuru",
-  "version": "0.0.1",
+  "name": "toolsguru",
+  "version": "1.0.0",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -9,7 +9,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "android-build": "ionic capacitor build android",
+    "android-prod": "ionic capacitor build android --prod"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +25,7 @@
     "@angular/router": "^16.0.0",
     "@capacitor/android": "5.2.3",
     "@capacitor/app": "5.0.6",
+    "@capacitor/assets": "^3.0.1",
     "@capacitor/browser": "^5.1.0",
     "@capacitor/core": "5.2.3",
     "@capacitor/haptics": "5.0.6",
