--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prepush": "npm run lint && npm run build",
     "android-build": "ionic capacitor build android",
     "android-prod": "ionic capacitor build android --prod"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run prepush"
+    }
   },
   "private": true,
   "dependencies": {
@@ -42,10 +49,10 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular-eslint/builder": "^16.0.0",
-    "@angular-eslint/eslint-plugin": "^16.0.0",
-    "@angular-eslint/eslint-plugin-template": "^16.0.0",
+    "@angular-eslint/eslint-plugin": "^16.3.1",
+    "@angular-eslint/eslint-plugin-template": "^16.3.1",
     "@angular-eslint/schematics": "^16.0.0",
-    "@angular-eslint/template-parser": "^16.0.0",
+    "@angular-eslint/template-parser": "^16.3.1",
     "@angular/cli": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
@@ -54,12 +61,18 @@
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "eslint": "^7.26.0",
-    "eslint-plugin-import": "2.22.1",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8.55.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-config-standard-with-typescript": "^40.0.0",
+    "eslint-plugin-angular": "^4.1.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-prefer-arrow": "1.2.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.3",
     "jasmine-core": "~4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
@@ -69,7 +82,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "ts-node": "^8.3.0",
-    "typescript": "~5.0.2"
+    "typescript": "^5.1.6"
   },
   "description": "An Ionic project"
 }
