Implemented the calender tool with notes save

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,10 @@
           "@typescript-eslint/strict-boolean-expressions": "off",
           "@typescript-eslint/restrict-plus-operands": "off",
           "@typescript-eslint/restrict-template-expressions": "off",
-          "@typescript-eslint/no-floating-promises": "off"
+          "@typescript-eslint/no-floating-promises": "off",
+          "@angular-eslint/component-class-suffix": ["error", {
+            "suffixes": ["Component", "Page"]
+          }]
         }
       }
     ]
