--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "prepush": "npm run lint && npm run build",
-    "android-build": "ionic capacitor build android",
-    "android-prod": "ionic capacitor build android --prod"
+    "android-build": "npx cap sync && ionic capacitor build android",
+    "android-prod": "npx cap sync && ionic capacitor build android --prod"
   },
   "husky": {
     "hooks": {
