Refactored the logic of calculator and stop-watch tool

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
     "root": true,
-    "ignorePatterns": ["dist/**/*", "www/", "*.spec.ts"],
+    "ignorePatterns": ["dist/**/*", "www/", "*.spec.ts", "/android"],
     "overrides": [
       {
         "files": ["*.ts"],
